Update TH Tuan 3

--- a/Chefify_Project/Chefify_Footer.html
+++ b/Chefify_Project/Chefify_Footer.html
@@ -17,23 +17,15 @@
                     <button>Send</button>
                 </div>
             </div>
-            <div class="footer-bottom">
-                <div class="footer-brand">
-                    <img src="../Chefify_Project/3_Data/Lab02/Group 16.png" alt="Chefify Logo">
-                    <!-- <span>Chefify</span> -->
-                    <p>© 2023 Chefify Company &nbsp; | &nbsp; <a href="#">Terms of Service</a> &nbsp; | &nbsp; <a href="#">Privacy Policy</a></p>
-                </div>
-                <!-- <p>© 2023 Chefify Company &nbsp; | &nbsp; <a href="#">Terms of Service</a> &nbsp; | &nbsp; <a href="#">Privacy Policy</a></p> -->
-            </div>
 
             <div class="footer-section">
-                <h3>Learn More</h3>
+                <h3 class="about">Learn More</h3>
                 <ul>
                     <li><a href="#">Our Cooks</a></li>
                     <li><a href="#">See Our Features</a></li>
                     <li><a href="#">FAQ</a></li>
                 </ul>
-                <h3>Shop</h3>
+                <h3 class="about">Shop</h3>
                 <ul>
                     <li><a href="#">Gift Subscription</a></li>
                     <li><a href="#">Send Us Feedback</a></li>
@@ -41,7 +33,7 @@
             </div>
 
             <div class="footer-section">
-                <h3>Recipes</h3>
+                <h3 class="about">Recipes</h3>
                 <ul>
                     <li><a href="#">What to Cook This Week</a></li>
                     <li><a href="#">Pasta</a></li>
@@ -52,15 +44,14 @@
                     <li><a href="#">Christmas</a></li>
                 </ul>
             </div>
+
         </div>
 
         <div class="footer-bottom">
             <div class="footer-brand">
                 <img src="../Chefify_Project/3_Data/Lab02/Group 16.png" alt="Chefify Logo">
-                <!-- <span>Chefify</span> -->
-                <p>© 2023 Chefify Company &nbsp; | &nbsp; <a href="#">Terms of Service</a> &nbsp; | &nbsp; <a href="#">Privacy Policy</a></p>
             </div>
-            <!-- <p>© 2023 Chefify Company &nbsp; | &nbsp; <a href="#">Terms of Service</a> &nbsp; | &nbsp; <a href="#">Privacy Policy</a></p> -->
+            <p>© 2023 Chefify Company &nbsp; | &nbsp; <a href="#">Terms of Service</a> &nbsp; | &nbsp; <a href="#">Privacy Policy</a></p>
         </div>
     </footer>
 </body>
