--- a/Chefify_Project/Chefify_Head.html
+++ b/Chefify_Project/Chefify_Head.html
@@ -9,8 +9,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img src="../Chefify_Project/3_Data/Lab02/Group 15.png" alt="Chefify Logo" height="100px" width="100px">
-            <!-- <span class="brand-name">Chefify</span> -->
+            <img src="../Chefify_Project/3_Data/Lab01/Group 9.png" alt="Chefify Logo">
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Search">
@@ -23,7 +22,7 @@
             <a href="#">About us</a>
         </nav>
         <div class="recipe-box">
-            <button > <img src="../Chefify_Project/3_Data/Lab02/Archive check.png" alt="" srcset=""> Your Recipe Box</button>
+            <button>Your Recipe Box</button>
             <img src="../Chefify_Project/3_Data/Lab02/Avatar 35.png" alt="User Profile" class="profile-pic">
         </div>
     </header>
